# TEAM_8688

./: .gitignore  CLAUDE.md  README.md  UV_SETUP.md  pyproject.toml  requirements.txt  step0_short_acct.py  step1_process_acct_transactions.py  step2_feature_engineering.py  step3_train_autogluon.py  step4_predict_all_accounts.py  step5_answer.py
Model/: step3_train_autogluon.py  step4_predict_all_accounts.py  step5_answer.py
Preprocess/: step0_short_acct.py  step1_process_acct_transactions.py  step2_feature_engineering.py
info/: datainfo.md  負樣本選擇策略.md
